# phiz

./: CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindGLM.cmake
src/: World.cpp  World.hpp  main.cpp
src/Body/: Body.cpp  Body.hpp  FixedPoint.cpp  FixedPoint.hpp  Particle.cpp  Particle.hpp
src/Link/: Damper.cpp  Damper.hpp  HookSpring.cpp  HookSpring.hpp  HookSpringDamper.cpp  HookSpringDamper.hpp  Link.cpp  Link.hpp  ParticleCoallision.cpp  ParticleCoallision.hpp
